一些小说明

--- a/doc/其他笔记.md
+++ b/doc/其他笔记.md
@@ -1,4 +1,9 @@
-在小绿点没有亮起的情况下发送退料gcode会导致UB
-
-拓竹目前在"暂停-退料"的过程中(单独暂停或者单独退料不会),暂停中的Z轴会越抬约高,目前的解决方法是在"暂停-退料"中间插一段Z轴运动
-M211 S \nM211 X1 Y1 Z1\nM1002 push_ref_mode\nG91 \nG1 Z-1.0 F900\nM1002 pop_ref_mode\nM211 R\n
+- 在小绿点没有亮起的情况下发送退料gcode会导致UB
+- 拓竹目前在"暂停-退料"的过程中(单独暂停或者单独退料不会),暂停中的Z轴会越抬约高,目前的解决方法是在"暂停-退料"中间插一段Z轴运动
+    -  ```
+        M211 S \nM211 X1 Y1 Z1\nM1002 push_ref_mode\nG91 \nG1 Z-1.0 F900\nM1002 pop_ref_mode\nM211 R\n
+        ```
+- 打包二进制包
+  - ```bash
+    esptool.py --chip esp32c3 merge_bin -o 包名.bin @flash_args
+    ```
