--- a/doc/其他笔记.md
+++ b/doc/其他笔记.md
@@ -6,4 +6,7 @@
 - 打包二进制包
   - ```bash
     esptool.py --chip esp32c3 merge_bin -o 包名.bin @flash_args
+
+    cd build
+    esptool.py --chip esp32c3 merge_bin -o TopAMS.bin --flash_mode dio --flash_freq 80m --flash_size 4MB 0x0 bootloader/bootloader.bin 0x10000 Top-AMS.bin 0x8000 partition_table/partition-table.bin
     ```
