--- a/doc/其他笔记.md
+++ b/doc/其他笔记.md
@@ -13,5 +13,8 @@
   不知道什么时候需要的命令格式又变了
   ```bash
   python -m esptool --chip esp32c3 merge_bin -o TopAMS.bin --flash_mode dio --flash_freq 80m --flash_size 4MB 0x0 bootloader/bootloader.bin 0x10000 Top-AMS.bin 0x8000 partition_table/partition-table.bin
+
+  python -m esptool --chip esp32c3 merge_bin -o Top-AMS.bin --flash_mode dio --flash_freq 80m --flash_size 4MB 0x0 build/bootloader/bootloader.bin 0x10000 build/Top-AMS.bin 0x8000 build/partition_table/partition-table.bin
+
   ```
   
